--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,9 @@ jobs:
         username: $CF_USERNAME
         password: $CF_PASSWORD
         organization: $CF_ORG
+        if: branch =~ ^release$
+        space: stage
+        if: branch = master
         space: review
+
+
