--- a/.travis.yml
+++ b/.travis.yml
@@ -9,36 +9,49 @@ if: tag IS blank
 
 jobs:
   include:
-    - stage: build and publish
-      language: java
-      jdk: oraclejdk8
-      install: skip
-      script: ./gradlew clean build
-      before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
-        - git tag -f $RELEASE_TAG
-      deploy:
-        provider: releases
-        api_key: $GITHUB_OAUTH_TOKEN
-        file: "build/libs/pal-tracker.jar"
-        skip_cleanup: true
-    - stage: deploy to review
-      language: bash
-      script:
-        - echo "Downloading $RELEASE_TAG"
-        - wget -P build/libs https://github.com/$GITHUB_USERNAME/pal-tracker/releases/download/$RELEASE_TAG/pal-tracker.jar
-      before_deploy:
-        - echo "Deploying $RELEASE_TAG to review"
-      deploy:
-        provider: cloudfoundry
-        api: $CF_API_URL
-        username: $CF_USERNAME
-        password: $CF_PASSWORD
-        organization: $CF_ORG
+    - stages:
+      - stage: build and publish
+        language: java
+        jdk: oraclejdk8
+        install: skip
+        script: ./gradlew clean build
+        before_deploy:
+          - git config --local user.name "Travis CI"
+          - git config --local user.email "travis@example.com"
+          - git tag -f $RELEASE_TAG
+        deploy:
+          provider: releases
+          api_key: $GITHUB_OAUTH_TOKEN
+          file: "build/libs/pal-tracker.jar"
+          skip_cleanup: true
+      - stage: deploy to review
+        language: bash
+        script:
+          - echo "Downloading $RELEASE_TAG"
+          - wget -P build/libs https://github.com/$GITHUB_USERNAME/pal-tracker/releases/download/$RELEASE_TAG/pal-tracker.jar
+        before_deploy:
+          - echo "Deploying $RELEASE_TAG to review"
+        deploy:
+          provider: cloudfoundry
+          api: $CF_API_URL
+          username: $CF_USERNAME
+          password: $CF_PASSWORD
+          organization: $CF_ORG
+          space: review
+      - stage: deploy to stage
         if: branch =~ ^release$
-        space: stage
-        if: branch = master
-        space: review
+        language: bash
+        script:
+          - echo "Downloading $RELEASE_TAG"
+          - wget -P build/libs https://github.com/$GITHUB_USERNAME/pal-tracker/releases/download/$RELEASE_TAG/pal-tracker.jar
+        before_deploy:
+          - echo "Deploying $RELEASE_TAG to stage"
+        deploy:
+          provider: cloudfoundry
+          api: $CF_API_URL
+          username: $CF_USERNAME
+          password: $CF_PASSWORD
+          organization: $CF_ORG
+          space: stage
 
 
