fixing build issue

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ sourceSets {
             srcDirs = ['src/main/java']
         }
         resources {
-            srcDirs = ['src/resources']
+            srcDirs = ['src/main/resources']
         }
     }
 }
